--- a/package.json
+++ b/package.json
@@ -57,7 +57,6 @@
 		"vitest-browser-svelte": "^0.1.0"
 	},
 	"dependencies": {
-		"@inlang/paraglide-js": "^2.0.0",
-		"vite-plugin-pwa": "^1.0.3"
+		"@inlang/paraglide-js": "^2.0.0"
 	}
 }
